{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 150,
  "lineage": "faf36487-d078-4e2d-231f-2f31715b9b78",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619392411736:internet-gateway/igw-0a29e5464128b26a7",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0b9482bc072b42b16"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0b9482bc072b42b16"
                ]
              }
            ],
            "id": "igw-0a29e5464128b26a7",
            "internet_gateway_id": "igw-0a29e5464128b26a7",
            "owner_id": "619392411736"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619392411736:vpc/vpc-0b9482bc072b42b16",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00b0355ccd5958505",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0b447833a7f51e2c3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b9482bc072b42b16",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00f3927f87ed9fb2e",
            "owner_id": "619392411736"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:619392411736:loadbalancer/app/ecommerce-api-alb/94a85f6b3cd73a01",
            "arn_suffix": "app/ecommerce-api-alb/94a85f6b3cd73a01",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecommerce-api-alb-1708902573.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:619392411736:loadbalancer/app/ecommerce-api-alb/94a85f6b3cd73a01",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecommerce-api-alb",
            "security_groups": [
              "sg-0a25a608ca0c73429"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-003be57411d8faed6"
              },
              {
                "subnet_id": "subnet-00a1141835a32cd15"
              },
              {
                "subnet_id": "subnet-0dd03cd169008a3f6"
              }
            ],
            "subnets": [
              "subnet-003be57411d8faed6",
              "subnet-00a1141835a32cd15",
              "subnet-0dd03cd169008a3f6"
            ],
            "tags": {
              "Name": "ecommerce-api-alb"
            },
            "tags_all": {
              "Name": "ecommerce-api-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0b9482bc072b42b16",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_group.module.sg.aws_security_group.this",
            "module.security_group.module.sg.aws_security_group.this_name_prefix",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:619392411736:listener/app/ecommerce-api-alb/94a85f6b3cd73a01/57c44467692bc38d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:619392411736:targetgroup/ecommerce-api-tg/8316bc3b681a94db",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:619392411736:listener/app/ecommerce-api-alb/94a85f6b3cd73a01/57c44467692bc38d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:619392411736:loadbalancer/app/ecommerce-api-alb/94a85f6b3cd73a01",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.security_group.module.sg.aws_security_group.this",
            "module.security_group.module.sg.aws_security_group.this_name_prefix",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:619392411736:targetgroup/ecommerce-api-tg/8316bc3b681a94db",
            "arn_suffix": "targetgroup/ecommerce-api-tg/8316bc3b681a94db",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/docs",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:619392411736:targetgroup/ecommerce-api-tg/8316bc3b681a94db",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecommerce-api-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ecommerce-api-tg"
            },
            "tags_all": {
              "Name": "ecommerce-api-tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0b9482bc072b42b16"
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.alb.aws_lb.this",
            "module.security_group.module.sg.aws_security_group.this",
            "module.security_group.module.sg.aws_security_group.this_name_prefix",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_alb_service_task",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619392411736:security-group/sg-0dc53102a6c0e13d0",
            "description": "Allow ALL egress from ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc53102a6c0e13d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Enables ping command from anywhere, see https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/security-group-rules-reference.html#sg-rules-ping",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "rdx-dev-ecommerce-api-service",
            "name_prefix": "",
            "owner_id": "619392411736",
            "revoke_rules_on_delete": false,
            "tags": {
              "Attributes": "service",
              "Name": "rdx-dev-ecommerce-api-service",
              "Namespace": "rdx",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "service",
              "Name": "rdx-dev-ecommerce-api-service",
              "Namespace": "rdx",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9482bc072b42b16"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_alb_service_task",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1862525750",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0dc53102a6c0e13d0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.ecs_alb_service_task.aws_security_group.ecs_service"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_alb_service_task",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_icmp_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Enables ping command from anywhere, see https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/security-group-rules-reference.html#sg-rules-ping",
            "from_port": 8,
            "id": "sgrule-701622641",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0dc53102a6c0e13d0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.ecs_alb_service_task.aws_security_group.ecs_service"
          ]
        }
      ]
    },
    {
      "module": "module.security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619392411736:security-group/sg-0a25a608ca0c73429",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a25a608ca0c73429",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "ecommerce-api-sg-20230429204008012800000001",
            "name_prefix": "ecommerce-api-sg-",
            "owner_id": "619392411736",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecommerce-api-sg"
            },
            "tags_all": {
              "Name": "ecommerce-api-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0b9482bc072b42b16"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-4281141430",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a25a608ca0c73429",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_group.module.sg.aws_security_group.this",
            "module.security_group.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-820566863",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a25a608ca0c73429",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_group.module.sg.aws_security_group.this",
            "module.security_group.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 0,
            "id": "sgrule-456693573",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a25a608ca0c73429",
            "self": true,
            "source_security_group_id": "sg-0a25a608ca0c73429",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_group.module.sg.aws_security_group.this",
            "module.security_group.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619392411736:vpc/vpc-0b9482bc072b42b16",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00b0355ccd5958505",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0b447833a7f51e2c3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b9482bc072b42b16",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00f3927f87ed9fb2e",
            "owner_id": "619392411736"
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05698ac9127a5d881",
            "association_id": "eipassoc-09736694dad61fc3f",
            "domain": "vpc",
            "id": "eipalloc-05698ac9127a5d881",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0c74134bf1753b8bb",
            "private_dns": "ip-172-31-0-223.eu-west-1.compute.internal",
            "private_ip": "172.31.0.223",
            "public_dns": "ec2-52-19-160-72.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.19.160.72",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1a",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1a",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027b74715451dc94a",
            "association_id": "eipassoc-0b545f2e9e150bc08",
            "domain": "vpc",
            "id": "eipalloc-027b74715451dc94a",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-024ea7fc35f1c1cf2",
            "private_dns": "ip-172-31-1-54.eu-west-1.compute.internal",
            "private_ip": "172.31.1.54",
            "public_dns": "ec2-34-240-73-149.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.240.73.149",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1b",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1b",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0befc4628c5bc952b",
            "association_id": "eipassoc-096b6c0539705e23b",
            "domain": "vpc",
            "id": "eipalloc-0befc4628c5bc952b",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-00df497cf04fcd159",
            "private_dns": "ip-172-31-1-74.eu-west-1.compute.internal",
            "private_ip": "172.31.1.74",
            "public_dns": "ec2-54-220-226-147.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.220.226.147",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1c",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1c",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05698ac9127a5d881",
            "connectivity_type": "public",
            "id": "nat-094c60afac0f082d3",
            "network_interface_id": "eni-0c74134bf1753b8bb",
            "private_ip": "172.31.0.223",
            "public_ip": "52.19.160.72",
            "subnet_id": "subnet-00a1141835a32cd15",
            "tags": {
              "Attributes": "nat",
              "Name": "rdx-dev-ecommerce-api-nat-euw1a",
              "Namespace": "rdx",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "rdx-dev-ecommerce-api-nat-euw1a",
              "Namespace": "rdx",
              "Stage": "dev"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_eip.nat_ips",
            "module.subnets.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027b74715451dc94a",
            "connectivity_type": "public",
            "id": "nat-081672d3336e989ae",
            "network_interface_id": "eni-024ea7fc35f1c1cf2",
            "private_ip": "172.31.1.54",
            "public_ip": "34.240.73.149",
            "subnet_id": "subnet-0dd03cd169008a3f6",
            "tags": {
              "Attributes": "nat",
              "Name": "rdx-dev-ecommerce-api-nat-euw1b",
              "Namespace": "rdx",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "rdx-dev-ecommerce-api-nat-euw1b",
              "Namespace": "rdx",
              "Stage": "dev"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_eip.nat_ips",
            "module.subnets.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0befc4628c5bc952b",
            "connectivity_type": "public",
            "id": "nat-028b2faee33ac5455",
            "network_interface_id": "eni-00df497cf04fcd159",
            "private_ip": "172.31.1.74",
            "public_ip": "54.220.226.147",
            "subnet_id": "subnet-003be57411d8faed6",
            "tags": {
              "Attributes": "nat",
              "Name": "rdx-dev-ecommerce-api-nat-euw1c",
              "Namespace": "rdx",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "rdx-dev-ecommerce-api-nat-euw1c",
              "Namespace": "rdx",
              "Stage": "dev"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_eip.nat_ips",
            "module.subnets.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619392411736:network-acl/acl-0cdf276d7fa57bb44",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0cdf276d7fa57bb44",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "619392411736",
            "subnet_ids": [
              "subnet-029389d0b66714d5e",
              "subnet-0d042695422af358d",
              "subnet-0e69933afec9b6e4b"
            ],
            "tags": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0b9482bc072b42b16"
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619392411736:network-acl/acl-0de4b462ee2981098",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0de4b462ee2981098",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "619392411736",
            "subnet_ids": [
              "subnet-003be57411d8faed6",
              "subnet-00a1141835a32cd15",
              "subnet-0dd03cd169008a3f6"
            ],
            "tags": {
              "Attributes": "public",
              "Name": "rdx-dev-ecommerce-api-public",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "rdx-dev-ecommerce-api-public",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-0b9482bc072b42b16"
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0da98d57424942c4c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-094c60afac0f082d3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0da98d57424942c4c",
            "state": "active",
            "timeouts": {
              "create": "2m",
              "delete": "5m",
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_eip.nat_ips",
            "module.subnets.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ad4c6366ed3566701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-081672d3336e989ae",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ad4c6366ed356670",
            "state": "active",
            "timeouts": {
              "create": "2m",
              "delete": "5m",
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_eip.nat_ips",
            "module.subnets.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a173b3242d7f1dcb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-028b2faee33ac5455",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a173b3242d7f1dcb",
            "state": "active",
            "timeouts": {
              "create": "2m",
              "delete": "5m",
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_eip.nat_ips",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a29e5464128b26a7",
            "id": "r-rtb-0aa2597603d3d386e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aa2597603d3d386e",
            "state": "active",
            "timeouts": {
              "create": "2m",
              "delete": "5m",
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "data.aws_internet_gateway.default",
            "module.subnets.aws_route_table.public",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619392411736:route-table/rtb-0da98d57424942c4c",
            "id": "rtb-0da98d57424942c4c",
            "owner_id": "619392411736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-094c60afac0f082d3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1a",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1a",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9482bc072b42b16"
          },
          "dependencies": [
            "module.subnets.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619392411736:route-table/rtb-0ad4c6366ed356670",
            "id": "rtb-0ad4c6366ed356670",
            "owner_id": "619392411736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-081672d3336e989ae",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1b",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1b",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9482bc072b42b16"
          },
          "dependencies": [
            "module.subnets.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619392411736:route-table/rtb-0a173b3242d7f1dcb",
            "id": "rtb-0a173b3242d7f1dcb",
            "owner_id": "619392411736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-028b2faee33ac5455",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1c",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1c",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9482bc072b42b16"
          },
          "dependencies": [
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619392411736:route-table/rtb-0aa2597603d3d386e",
            "id": "rtb-0aa2597603d3d386e",
            "owner_id": "619392411736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a29e5464128b26a7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "public",
              "Name": "rdx-dev-ecommerce-api-public",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "rdx-dev-ecommerce-api-public",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9482bc072b42b16"
          },
          "dependencies": [
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0350c66323affe426",
            "route_table_id": "rtb-0da98d57424942c4c",
            "subnet_id": "subnet-029389d0b66714d5e"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089b2f7dae88c3c20",
            "route_table_id": "rtb-0ad4c6366ed356670",
            "subnet_id": "subnet-0d042695422af358d"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa9f5a3efa86e119",
            "route_table_id": "rtb-0a173b3242d7f1dcb",
            "subnet_id": "subnet-0e69933afec9b6e4b"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d53d8c19adfa8242",
            "route_table_id": "rtb-0aa2597603d3d386e",
            "subnet_id": "subnet-00a1141835a32cd15"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0724afeb3b0c59fbd",
            "route_table_id": "rtb-0aa2597603d3d386e",
            "subnet_id": "subnet-0dd03cd169008a3f6"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059130ab26095d5a1",
            "route_table_id": "rtb-0aa2597603d3d386e",
            "subnet_id": "subnet-003be57411d8faed6"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619392411736:subnet/subnet-029389d0b66714d5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.31.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029389d0b66714d5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619392411736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1a",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1a",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0b9482bc072b42b16"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619392411736:subnet/subnet-0d042695422af358d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.31.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d042695422af358d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619392411736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1b",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1b",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0b9482bc072b42b16"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619392411736:subnet/subnet-0e69933afec9b6e4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.31.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e69933afec9b6e4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619392411736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1c",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "rdx-dev-ecommerce-api-private-euw1c",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0b9482bc072b42b16"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619392411736:subnet/subnet-00a1141835a32cd15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.31.0.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a1141835a32cd15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619392411736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "rdx-dev-ecommerce-api-public-euw1a",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "rdx-dev-ecommerce-api-public-euw1a",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-0b9482bc072b42b16"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619392411736:subnet/subnet-0dd03cd169008a3f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.31.1.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd03cd169008a3f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619392411736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "rdx-dev-ecommerce-api-public-euw1b",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "rdx-dev-ecommerce-api-public-euw1b",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-0b9482bc072b42b16"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619392411736:subnet/subnet-003be57411d8faed6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.31.1.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003be57411d8faed6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619392411736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "rdx-dev-ecommerce-api-public-euw1c",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "rdx-dev-ecommerce-api-public-euw1c",
              "Namespace": "rdx",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-0b9482bc072b42b16"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}